<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="FB_Robot" Id="{d50c368b-652f-4516-b34d-9545576d1fa6}" SpecialFunc="None">
    <Declaration><![CDATA[//Todo - Add flags for if communicating, program info, 
FUNCTION_BLOCK FB_Robot
VAR_INPUT
END_VAR
VAR_OUTPUT
END_VAR
VAR
	robotPose 		: Structure_RobotPose;	//Stores robot pose

	//----------Inputs From Robot ----------
	x_pose_1 AT %I* : USINT; //Signal 1-8
	x_pose_2 AT %I* : USINT; //Signal 9-16
	y_pose_1 AT %I* : USINT; //Signal 17-25
	y_pose_2 AT %I* : USINT; //Signal 26-32
	z_pose_1 AT %I* : USINT; //Signal 33-40
	z_pose_2 AT %I* : USINT; //Signal 41-48
	o_pose_1 AT %I* : USINT; //Signal 49-56
	o_pose_2 AT %I* : USINT; //Signal 57-64
	a_pose_1 AT %I* : USINT; //Signal 65-72
	a_pose_2 AT %I* : USINT; //Signal 73-80
	t_pose_1 AT %I* : USINT; //Signal 81-88
	t_pose_2 AT %I* : USINT; //Signal 89-96
	xtool_pose_1 AT %I* : USINT; //Signal 129
	xtool_pose_2 AT %I* : USINT; //Signal 
	ytool_pose_1 AT %I* : USINT; //Signal 137
	ytool_pose_2 AT %I* : USINT; //Signal 
	ztool_pose_1 AT %I* : USINT; //Signal 145
	ztool_pose_2 AT %I* : USINT; //Signal 
	otool_pose_1 AT %I* : USINT; //Signal 153
	otool_pose_2 AT %I* : USINT; //Signal 
	atool_pose_1 AT %I* : USINT; //Signal 161
	atool_pose_2 AT %I* : USINT; //Signal 
	ttool_pose_1 AT %I* : USINT; //Signal 169
	ttool_pose_2 AT %I* : USINT; //Signal 
	inRobotMotorOn			: BOOL; //Signal number 97
	inRobotError		: BOOL; //Signal 98
	inRobotAutomaticMode	: BOOL; //Signal 99
	inRobotAtHome				: BOOL; //Signal 100
	inRobotInTeach				: BOOL; //Signal 101
	inRobotCycleStart				: BOOL; //Signal 102
	inRobotPowerOn				: BOOL; //Signal 103
	inRobotPoseDataIsSent		: BOOL; //Signal 104
	inRobotEStopOn			: BOOL; //Signal 105
	inRobotBatteryAlarm			: BOOL; //Signal 106
	inRobotToolNumberCurrent		: USINT; //Signal 107-109
	inRobotToolNumberRequest		: USINT; //Signal 110-112
	inRobotReleaseTool			: BOOL; //Signal 113
	inRobotGrabTool				: BOOL; //Signal 114
	inProgramRunning				: BOOL; //Signal 115
	sigs97104 AT %I*			: USINT;
	sigs105112 AT %I*			: USINT;
	sigs113120 AT %I*			: USINT;
	
	//----------Outputs To Robot ----------
	outRobotTurnMotorOn			: BOOL; //Signal 1001
	outRobotResetError				: BOOL; //Signal 1002
	outRobotStartCycle				: BOOL; //Signal 1003
	outRobotResetProgram			: BOOL; //Signal 1004
	outRobotStartProgram				: BOOL; //Signal 1005
	outRobotRunHold		 		: BOOL; //Signal 1006
	outRobotHome					: BOOL; //Signal 1007
	outRobotTurnMotorOff			: BOOL; //1008
	outRobotToolReleased			: BOOL; //Signal 1009
	outRobotCurrentTool				: USINT; //Signal 1011-1013
	outRobotNoEStop					: BOOL := TRUE; //Signal 1014
	outRobotToolChangeAuto			: BOOL := TRUE; // Signal 1015
	outRobotSpindleOn				: BOOL; //Signal 1016
	outRobotProgramChoice			: USINT; //Signals 1017-1020
	outRobotProgramOption1			: BOOL; //Signal 1021
	outRobotProgramOption2			: BOOL; //Signal 1022
	outRobotProgramOption3			: BOOL; //Signal 1023
	sigs10011008	AT %Q*		: USINT;
	sigs10091016	AT %Q*		: USINT;
	sigs10171024	AT %Q*		: USINT;
	sigs10251032	AT %Q*		: USINT;
	sigs10331040	AT %Q*		: USINT;
	sigs10411048	AT %Q*		: USINT;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[Update_Status();

//Turn off startRobot once program started 
	IF inProgramRunning THEN
		outRobotStartProgram := FALSE;
	END_IF

//Change request to home robot once robot is in home position
	IF inRobotAtHome OR inRobotError THEN 
		outRobotHome := FALSE;
	END_IF
	
//Turn off error reset and motor when on
	IF NOT inRobotError THEN
		outRobotResetError := FALSE;
	END_IF
	
	IF inRobotMotorOn THEN		
		outRobotTurnMotorOn := TRUE;
	END_IF
]]></ST>
    </Implementation>
    <Method Name="EStop_OFF" Id="{11b55d3b-4c86-4338-971e-1665e9d7cb48}">
      <Declaration><![CDATA[//Turns external Estop off
METHOD EStop_OFF : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[outRobotNoEStop := TRUE;]]></ST>
      </Implementation>
    </Method>
    <Method Name="Home_Robot" Id="{eca540c4-31fc-4643-aeb8-caefcff4553d}">
      <Declaration><![CDATA[//Send home command to robot
METHOD Home_Robot
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[outRobotHome := TRUE;
]]></ST>
      </Implementation>
    </Method>
    <Method Name="Init_Robot" Id="{5fa8699b-d302-47dd-8fe6-b7724c082bbc}">
      <Declaration><![CDATA[METHOD Init_Robot : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[outRobotResetError := TRUE;
outRobotTurnMotorOn := TRUE;
outRobotRunHold := TRUE;
outRobotStartCycle := TRUE;]]></ST>
      </Implementation>
    </Method>
    <Method Name="Program_Select" Id="{5ccc5e7e-14d0-4912-bf3c-54f9c88aeb76}">
      <Declaration><![CDATA[// Select the robot program based on HMI inputs
METHOD Program_Select
VAR_INPUT
	programChoice :	USINT;
	option1 : BOOL;
	option2 : BOOL;
	option3 : BOOL;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[outRobotProgramChoice := programChoice;
outRobotProgramOption1 := option1;
outRobotProgramOption2	:= option2;
outRobotProgramOption3	:= option3;]]></ST>
      </Implementation>
    </Method>
    <Method Name="Release_Update" Id="{dba9479c-b587-4cb4-8aba-4cf3f2e05c5d}">
      <Declaration><![CDATA[METHOD Release_Update
VAR_INPUT
	release : BOOL;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[outRobotToolReleased := release;]]></ST>
      </Implementation>
    </Method>
    <Method Name="Reset_Robot" Id="{77e8bcdc-f7d0-483d-81fa-3d726fa4ee3a}">
      <Declaration><![CDATA[//Resets robot errors
METHOD Reset_Robot : BOOL //Returns true if robot reset successfully
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[outRobotNoEStop := TRUE;
outRobotResetError := TRUE;
outRobotResetProgram := TRUE;
outRobotTurnMotorOn := TRUE;
outRobotTurnMotorOff := FALSE;

Reset_Robot := NOT(inRobotError OR inRobotEStopOn);]]></ST>
      </Implementation>
    </Method>
    <Method Name="Robot_Manual_Control" Id="{ed6ccda4-2af5-42af-8ac3-98592d92e5da}">
      <Declaration><![CDATA[//TODO: Implement
METHOD Robot_Manual_Control
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[]]></ST>
      </Implementation>
    </Method>
    <Method Name="RunHold_Robot" Id="{feac628f-72cf-4100-8d56-47c2e35d8c99}">
      <Declaration><![CDATA[//Holds robot if false
METHOD RunHold_Robot
VAR_INPUT
	RunHold : BOOL; //True for run, False for hold
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[outRobotRunHold := RunHold;]]></ST>
      </Implementation>
    </Method>
    <Method Name="Start_Robot" Id="{95ede5df-1a05-4c33-b6a8-dcc0ec83997b}">
      <Declaration><![CDATA[//STart robot program
METHOD Start_Robot
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[outRobotTurnMotorOn := TRUE;
outRobotStartProgram := TRUE;]]></ST>
      </Implementation>
    </Method>
    <Method Name="Stop_Robot" Id="{cd69170d-edd1-4221-b229-919e555987e2}">
      <Declaration><![CDATA[//E-stop to robot
METHOD Stop_Robot : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[outRobotNoEStop := FALSE;]]></ST>
      </Implementation>
    </Method>
    <Method Name="Transform_Matrix" Id="{44628c20-9019-4a7c-bbf3-07145b104f24}">
      <Declaration><![CDATA[METHOD Transform_Matrix : Array2DStaticMatrix
VAR_INPUT
	data: ARRAY[1..4,1..4] OF LREAL;
	y : LREAL;
	z0 : LREAL;
	z1: LREAL;
	xpose: LREAL;
	ypose: LREAL;
	zpose: LREAL;
END_VAR

VAR
	TCP: INT;
	SetI: INT;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[//TCP(Data := data);
//toolInv.SetI(0, COS(y)*COS(z0)*COS(z1)-SIN(z0)*SIN(z1));
//toolInv.SetI(1, -COS(z1)*SIN(z0)-COS(y)*COS(z0)*SIN(z1));
//toolInv.SetI(2, SIN(y)*COS(z0));
//toolInv.SetI(3, xpose);
//toolInv.SetI(4, COS(y)*COS(z1)*SIN(z0)+COS(z0)*SIN(z1));
//toolInv.SetI(5, COS(z0)*COS(z1)-COS(y)*SIN(z0)*SIN(z1));
//toolInv.SetI(6, SIN(y)*SIN(z0));
//toolInv.SetI(7, ypose);
//toolInv.SetI(8, -SIN(y)*COS(z1));
//toolInv.SetI(9, SIN(y)*SIN(z1));
//toolInv.SetI(10, COS(y));
//toolInv.SetI(11, zpose);
//toolInv.SetI(12, 0);
//toolInv.SetI(13, 0);
//toolInv.SetI(14, 0);
//toolInv.SetI(15, 1);]]></ST>
      </Implementation>
    </Method>
    <Method Name="Update_Pose" Id="{095f6df8-3cda-4049-b351-7910f936202a}">
      <Declaration><![CDATA[//Updates current robot pose
//TODO make flag that verifies pose is being sent
METHOD Update_Pose : Structure_RobotPose
VAR_INPUT
END_VAR
VAR
	xposeTool : LREAL;
	yposeTool : LREAL;
	zposeTool : LREAL;
	oposeTool : LREAL;
	aposeTool : LREAL;
	tposeTool : LREAL;
	
	xposeTCP : LREAL;
	yposeTCP : LREAL;
	zposeTCP : LREAL;
	oposeTCP : LREAL;
	aposeTCP : LREAL;
	tposeTCP : LREAL;
	
	dustBoot : Array2DStaticMatrix; //This instance is the matrix that the code will interact with
	dustBoot_Data : ARRAY[1..4,1..1] OF LREAL := [-58.997,133.95,455.3,1];; //This array will act as the memory for the matrix
	
	toolInv : Array2DStaticMatrix; //This instance is the initial column vector
	toolInv_Data : ARRAY[1..4,1..4] OF LREAL; //This array will act as the memory for the initial column vector, prepopulated
	
	TCP : Array2DStaticMatrix; //This instance is the initial column vector
	TCP_Data : ARRAY[1..4,1..4] OF LREAL; //This array will act as the memory for the initial column vector, prepopulated
	
	Intermediate : Array2DStaticMatrix;
	Intermediate_Data : ARRAY[1..4,1..4] OF LREAL;
	
	Result : Array2DStaticMatrix; //This instance is the resulting column vector
	Result_Data : ARRAY[1..4,1..1] OF LREAL := [1, 2, 3,1]; //This array will act as the memory for the resulting column vector
	
	success1 : BOOL; //records success or failure of the matrix multiplication
	success2 : BOOL; //records success or failure of the matrix multiplication
	equal : BOOL; //records success if the resulting vector is equal to the first
	y: LREAL;
	z0: LREAL;
	z1:LREAL;
	xpose:LREAL;
	ypose:LREAL;
	zpose:LREAL;
	test: LREAL;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[// RobotPose
//robotPose.xPose := UINT_TO_INT(x_pose_2)*256 + UINT_TO_INT(x_pose_1) - 4000;
//robotPose.yPose := UINT_TO_INT(y_pose_2)*256 + UINT_TO_INT(y_pose_1) - 4000;
//robotPose.zPose := UINT_TO_INT(z_pose_2)*256 + UINT_TO_INT(z_pose_1) - 4000;
//robotPose.oPose := UINT_TO_INT(o_pose_2)*256 + UINT_TO_INT(o_pose_1) - 400;
//robotPose.aPose := UINT_TO_INT(a_pose_2)*256 + UINT_TO_INT(a_pose_1) - 400;
//robotPose.tPose := UINT_TO_INT(t_pose_2)*256 + UINT_TO_INT(t_pose_1) - 400;

xPoseTCP := UINT_TO_INT(x_pose_2)*256 + UINT_TO_INT(x_pose_1) - 4000;
yPoseTCP := UINT_TO_INT(y_pose_2)*256 + UINT_TO_INT(y_pose_1) - 4000;
zPoseTCP := UINT_TO_INT(z_pose_2)*256 + UINT_TO_INT(z_pose_1) - 4000;
oPoseTCP := DEG_TO_RAD(UINT_TO_INT(o_pose_2)*256 + UINT_TO_INT(o_pose_1) - 400);
aPoseTCP := DEG_TO_RAD(UINT_TO_INT(a_pose_2)*256 + UINT_TO_INT(a_pose_1) - 400);
tPoseTCP := DEG_TO_RAD(UINT_TO_INT(t_pose_2)*256 + UINT_TO_INT(t_pose_1) - 400);

xPoseTool := UINT_TO_INT(xtool_pose_2)*256 + UINT_TO_INT(xtool_pose_1) - 4000;
yPoseTool := UINT_TO_INT(ytool_pose_2)*256 + UINT_TO_INT(ytool_pose_1) - 4000;
zPoseTool := UINT_TO_INT(ztool_pose_2)*256 + UINT_TO_INT(ztool_pose_1) - 4000;
oPoseTool := DEG_TO_RAD(UINT_TO_INT(otool_pose_2)*256 + UINT_TO_INT(otool_pose_1) - 400);
aPoseTool := DEG_TO_RAD(UINT_TO_INT(atool_pose_2)*256 + UINT_TO_INT(atool_pose_1) - 400);
tPoseTool := DEG_TO_RAD(UINT_TO_INT(ttool_pose_2)*256 + UINT_TO_INT(ttool_pose_1) - 400);

dustBoot(Data := dustBoot_Data);
toolInv(Data := toolInv_Data);
TCP(Data := TCP_Data);
Intermediate(Data := Intermediate_Data);
Result(Data := Result_Data);

z0 := oposeTool;
y := aposeTool;
z1 := tposeTool;
xpose := xposeTool;
ypose := yposetool;
zpose := zposetool;
toolInv.SetI(0, COS(y)*COS(z0)*COS(z1)-SIN(z0)*SIN(z1));
toolInv.SetI(1, -COS(z1)*SIN(z0)-COS(y)*COS(z0)*SIN(z1));
toolInv.SetI(2, SIN(y)*COS(z0));
toolInv.SetI(3, xpose);
toolInv.SetI(4, COS(y)*COS(z1)*SIN(z0)+COS(z0)*SIN(z1));
toolInv.SetI(5, COS(z0)*COS(z1)-COS(y)*SIN(z0)*SIN(z1));
toolInv.SetI(6, SIN(y)*SIN(z0));
toolInv.SetI(7, ypose);
toolInv.SetI(8, -SIN(y)*COS(z1));
toolInv.SetI(9, SIN(y)*SIN(z1));
toolInv.SetI(10, COS(y));
toolInv.SetI(11, zpose);
toolInv.SetI(12, 0);
toolInv.SetI(13, 0);
toolInv.SetI(14, 0);
toolInv.SetI(15, 1);

z0 := oposeTCP;
y := aposeTCP;
z1 := tposeTCP;
xpose := xposeTCP;
ypose := yposeTCP;
zpose := zposeTCP;
TCP.SetI(0, COS(y)*COS(z0)*COS(z1)-SIN(z0)*SIN(z1));
TCP.SetI(1, -COS(z1)*SIN(z0)-COS(y)*COS(z0)*SIN(z1));
TCP.SetI(2, SIN(y)*COS(z0));
TCP.SetI(3, xpose);
TCP.SetI(4, COS(y)*COS(z1)*SIN(z0)+COS(z0)*SIN(z1));
TCP.SetI(5, COS(z0)*COS(z1)-COS(y)*SIN(z0)*SIN(z1));
TCP.SetI(6, SIN(y)*SIN(z0));
TCP.SetI(7, ypose);
TCP.SetI(8, -SIN(y)*COS(z1));
TCP.SetI(9, SIN(y)*SIN(z1));
TCP.SetI(10, COS(y));
TCP.SetI(11, zpose);
TCP.SetI(12, 0);
TCP.SetI(13, 0);
TCP.SetI(14, 0);
TCP.SetI(15, 1);

//toolInv := Transform_Matrix(data := toolInv_Data, y := aposeTool, z0 := tposeTool, z1 := oposeTool, xpose := -xposeTool, ypose := -yposetool, zpose := -zposetool);
//TCP := Transform_Matrix(data := TCP_Data, y := aposeTCP, z0 := tposeTCP, z1 := oposeTCP, xpose := xposeTCP, ypose := yposeTCP, zpose := zposeTCP);
toolInv.InvertSquare(1E-20);

success1 := Matrix_Product(TCP, toolInv, Intermediate);
success2 := Matrix_Product(Intermediate, dustBoot, Result);


robotPose.xPose := Result.GetI(0);
robotPose.yPose := Result.GetI(1);
robotPose.zPose := Result.GetI(2);
//robotPose.yPose := 
//robotPose.zPose := 
//robotPose.oPose := 
//robotPose.aPose := 
//robotPose.tPose := 

Update_Pose := robotPose;]]></ST>
      </Implementation>
    </Method>
    <Method Name="Update_Status" Id="{1be56ac6-764b-4729-954d-f7379608e62a}">
      <Declaration><![CDATA[//Updates run status and IOs in Beckhoff system
METHOD Update_Status
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[// Robot signals
sigs10011008.0 := outRobotTurnMotorOn; // 1001
sigs10011008.1 := outRobotResetError; //1002
sigs10011008.2 := outRobotStartCycle; //1003
sigs10011008.3 := outRobotResetProgram; //1004
sigs10011008.4 := outRobotStartProgram; //1005
sigs10011008.5 := outRobotRunHold; //1006
sigs10011008.6 := outRobotHome; //1007
sigs10011008.7 := outRobotTurnMotorOff; //1008
sigs10091016.0 := outRobotToolReleased; //1009
//sigs10091016.1 := outRobotToolGrabbed; //1010 No longer using
sigs10091016.2 := outRobotCurrentTool.0; //1011
sigs10091016.3 := outRobotCurrentTool.1; //1012
sigs10091016.4 := outRobotCurrentTool.2; //1013
sigs10091016.5 := outRobotNoEStop; //1014
sigs10091016.6 := outRobotToolChangeAuto; //1015
sigs10091016.7 := outRobotSpindleOn; //1016
sigs10171024   := outRobotProgramChoice; //1017-1020
sigs10171024.4 := outRobotProgramOption1; //1021
sigs10171024.5 := outRobotProgramOption2; //1022
sigs10171024.6 := outRobotProgramOption3; //1023

inRobotMotorOn := sigs97104.0; //97
inRobotError := sigs97104.1; //98
inRobotAutomaticMode := sigs97104.2; //99
inRobotAtHome := sigs97104.3; //100
inRobotInTeach := sigs97104.4; //101
inRobotCycleStart := sigs97104.5; //102
inRobotPowerOn := sigs97104.6; //103
inRobotPoseDataIsSent := sigs97104.7; //104
inRobotEStopOn := sigs105112.0; //105
inRobotBatteryAlarm := sigs105112.1; //106
inRobotToolNumberCurrent := 0;
inRobotToolNumberCurrent := inRobotToolNumberCurrent OR (BIT_TO_USINT(sigs105112.2) * 1); //107
inRobotToolNumberCurrent := inRobotToolNumberCurrent OR (BIT_TO_USINT(sigs105112.3) * 2); //108
inRobotToolNumberCurrent := inRobotToolNumberCurrent OR (BIT_TO_USINT(sigs105112.4) * 4); //109

inRobotToolNumberRequest := 0;
inRobotToolNumberRequest := inRobotToolNumberRequest OR (BIT_TO_USINT(sigs105112.5) * 1); //110
inRobotToolNumberRequest := inRobotToolNumberRequest OR (BIT_TO_USINT(sigs105112.6) * 2); //111
inRobotToolNumberRequest := inRobotToolNumberRequest OR (BIT_TO_USINT(sigs105112.7) * 4); //112
inRobotReleaseTool := sigs113120.0; //113
inRobotGrabTool := sigs113120.1; //114
inProgramRunning := sigs113120.2; // Signal 115

// posedata.pc is running

// ]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="FB_Robot">
      <LineId Id="9" Count="0" />
      <LineId Id="138" Count="4" />
      <LineId Id="73" Count="0" />
      <LineId Id="68" Count="1" />
      <LineId Id="71" Count="1" />
      <LineId Id="143" Count="4" />
      <LineId Id="151" Count="1" />
      <LineId Id="155" Count="0" />
      <LineId Id="154" Count="0" />
      <LineId Id="149" Count="0" />
    </LineIds>
    <LineIds Name="FB_Robot.EStop_OFF">
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="FB_Robot.Home_Robot">
      <LineId Id="14" Count="0" />
      <LineId Id="12" Count="0" />
    </LineIds>
    <LineIds Name="FB_Robot.Init_Robot">
      <LineId Id="5" Count="3" />
    </LineIds>
    <LineIds Name="FB_Robot.Program_Select">
      <LineId Id="15" Count="2" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="FB_Robot.Release_Update">
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="FB_Robot.Reset_Robot">
      <LineId Id="8" Count="0" />
      <LineId Id="11" Count="1" />
      <LineId Id="10" Count="0" />
      <LineId Id="9" Count="0" />
      <LineId Id="14" Count="0" />
      <LineId Id="16" Count="0" />
    </LineIds>
    <LineIds Name="FB_Robot.Robot_Manual_Control">
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="FB_Robot.RunHold_Robot">
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="FB_Robot.Start_Robot">
      <LineId Id="10" Count="1" />
    </LineIds>
    <LineIds Name="FB_Robot.Stop_Robot">
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="FB_Robot.Transform_Matrix">
      <LineId Id="28" Count="0" />
      <LineId Id="12" Count="14" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="FB_Robot.Update_Pose">
      <LineId Id="6" Count="5" />
      <LineId Id="5" Count="0" />
      <LineId Id="20" Count="0" />
      <LineId Id="36" Count="4" />
      <LineId Id="19" Count="0" />
      <LineId Id="42" Count="5" />
      <LineId Id="41" Count="0" />
      <LineId Id="74" Count="1" />
      <LineId Id="79" Count="1" />
      <LineId Id="83" Count="0" />
      <LineId Id="159" Count="0" />
      <LineId Id="161" Count="0" />
      <LineId Id="123" Count="0" />
      <LineId Id="107" Count="0" />
      <LineId Id="128" Count="0" />
      <LineId Id="126" Count="0" />
      <LineId Id="125" Count="0" />
      <LineId Id="124" Count="0" />
      <LineId Id="108" Count="14" />
      <LineId Id="105" Count="0" />
      <LineId Id="136" Count="0" />
      <LineId Id="160" Count="0" />
      <LineId Id="137" Count="0" />
      <LineId Id="139" Count="18" />
      <LineId Id="135" Count="0" />
      <LineId Id="84" Count="0" />
      <LineId Id="100" Count="1" />
      <LineId Id="178" Count="1" />
      <LineId Id="102" Count="0" />
      <LineId Id="104" Count="0" />
      <LineId Id="103" Count="0" />
      <LineId Id="49" Count="1" />
      <LineId Id="72" Count="1" />
      <LineId Id="51" Count="3" />
      <LineId Id="48" Count="0" />
      <LineId Id="13" Count="0" />
      <LineId Id="12" Count="0" />
    </LineIds>
    <LineIds Name="FB_Robot.Update_Status">
      <LineId Id="18" Count="0" />
      <LineId Id="31" Count="6" />
      <LineId Id="104" Count="0" />
      <LineId Id="30" Count="0" />
      <LineId Id="38" Count="0" />
      <LineId Id="103" Count="0" />
      <LineId Id="115" Count="1" />
      <LineId Id="110" Count="0" />
      <LineId Id="121" Count="1" />
      <LineId Id="39" Count="0" />
      <LineId Id="94" Count="2" />
      <LineId Id="43" Count="0" />
      <LineId Id="55" Count="6" />
      <LineId Id="54" Count="0" />
      <LineId Id="63" Count="1" />
      <LineId Id="78" Count="0" />
      <LineId Id="84" Count="2" />
      <LineId Id="88" Count="4" />
      <LineId Id="74" Count="0" />
      <LineId Id="97" Count="0" />
      <LineId Id="62" Count="0" />
      <LineId Id="21" Count="0" />
      <LineId Id="20" Count="0" />
      <LineId Id="23" Count="0" />
      <LineId Id="22" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>